Add thead and tbody attribute customisation to tables

--- a/app/components/katalyst/table_component.html.erb
+++ b/app/components/katalyst/table_component.html.erb
@@ -1,13 +1,13 @@
 <%= tag.table(**html_attributes) do %>
   <%= render caption if caption? %>
   <% if header? %>
-  <thead>
-  <%= header_row.render_in(view_context, &row_proc) %>
-  </thead>
+    <%= tag.thead(**thead_attributes) do %>
+      <%= header_row.render_in(view_context, &row_proc) %>
+    <% end %>
   <% end %>
-  <tbody>
-  <% collection.each do |record| %>
-    <%= body_row(record).render_in(view_context) { |r| row_proc.call(r, record) } %>
+  <%= tag.tbody(**tbody_attributes) do %>
+    <% collection.each do |record| %>
+      <%= body_row(record).render_in(view_context) { |r| row_proc.call(r, record) } %>
+    <% end %>
   <% end %>
-  </tbody>
 <% end %>
