Add selectable extension
Allows table rows to be selected via checkbox with bulk actions made available when one or more rows are selected.

--- a/spec/dummy/app/views/resources/_resource.html+row.erb
+++ b/spec/dummy/app/views/resources/_resource.html+row.erb
@@ -1,4 +1,11 @@
 <%# locals: { row:, resource: } %>
+
+<% row.html_attributes = { id: dom_id(resource) } if row.body? %>
+
+<% row.try(:selection) %>
 <% row.cell :name, label: "Resource partial" do %>
   <%= resource.name %>
+<% end %>
+<% row.cell :active, class: "active" do |cell| %>
+  <%= cell.value ? "Yes" : "No" %>
 <% end %>
