--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css">
     <%= javascript_importmap_tags %>
+
+    <%= yield :head %>
   </head>
 
   <body>
