--- a/spec/dummy/app/views/resources/index.html.erb
+++ b/spec/dummy/app/views/resources/index.html.erb
@@ -1,3 +1,8 @@
+<% content_for(:head) do %>
+  <meta name="turbo-refresh-method" content="morph">
+  <meta name="turbo-refresh-scroll" content="preserve">
+<% end %>
+
 <%= render table.selection do %>
   <%= tag.button "Download", formaction: "/resources.csv", formmethod: "GET" %>
   <%= tag.button "Activate", formaction: "/resources/active", formmethod: "PUT" %>
