Add orderable table example + spec

--- a/spec/dummy/app/views/application/show.html.erb
+++ b/spec/dummy/app/views/application/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Katalyst Tables</h1>
 
 <ul>
+  <li><a href="/faqs">Faqs</a></li>
   <li><a href="/people">People</a></li>
   <li><a href="/resources">Resources</a></li>
 </ul>
