--- a/spec/dummy/app/views/people/index.html.erb
+++ b/spec/dummy/app/views/people/index.html.erb
@@ -20,6 +20,7 @@
 
 <%= table_with(collection: @people) do |row| %>
   <% row.cell :name %>
+  <% row.boolean :active %>
 <% end %>
 
 <%== pagy_nav(@people.pagination) %>
