Add date time type column

--- a/spec/dummy/app/views/people/index.html.erb
+++ b/spec/dummy/app/views/people/index.html.erb
@@ -22,6 +22,7 @@
   <% row.cell :name %>
   <% row.boolean :active %>
   <% row.date :created_at, relative: person&.active %>
+  <% row.datetime :created_at %>
 <% end %>
 
 <%== pagy_nav(@people.pagination) %>
