Add currency type column

--- a/spec/dummy/app/views/people/index.html.erb
+++ b/spec/dummy/app/views/people/index.html.erb
@@ -24,6 +24,7 @@
   <% row.date :created_at, relative: person&.active %>
   <% row.datetime :created_at %>
   <% row.number :id %>
+  <% row.currency :id, label: "Currency" %>
 <% end %>
 
 <%== pagy_nav(@people.pagination) %>
