Revert "Generate table row ids"
We're going to make this an optional extension instead.

This reverts commit 5a8d456d5516fe3a6bbf8146d487b101177b0530.

--- a/spec/dummy/app/views/faqs/index.html.erb
+++ b/spec/dummy/app/views/faqs/index.html.erb
@@ -11,6 +11,8 @@
    table.with_orderable(url: order_faqs_path) %>
 
 <%= render table do |row, faq| %>
+  <% row.html_attributes = { id: dom_id(faq) } if row.body? %>
+
   <% row.ordinal %>
   <% row.cell :question %>
   <% row.cell :answer %>
