--- a/spec/dummy/app/views/resources/_resource.html+row.erb
+++ b/spec/dummy/app/views/resources/_resource.html+row.erb
@@ -1,5 +1,7 @@
 <%# locals: { row:, resource: } %>
 
+<% row.html_attributes = { id: dom_id(resource) } if row.body? %>
+
 <% row.try(:selection) %>
 <% row.cell :name, label: "Resource partial" do %>
   <%= resource.name %>
