Route cell calls through table component
This is the start of a major refactor to simplify common table extension
patterns. Rather than ConfigurableComponents, we're using TableComponent as the
receiver for all row_proc calls, which means that any extensions to add simple
features such as custom cell types can now be simple methods added to the
TableComponent.

This first commit re-establishes a working TableComponent test suite,
later commits will update the existing cell type extensions and re-establish
feature parity.

--- a/app/components/katalyst/table_component.html.erb
+++ b/app/components/katalyst/table_component.html.erb
@@ -1,13 +1,13 @@
 <%= tag.table(**html_attributes) do %>
   <%= render caption if caption? %>
-  <% if header? %>
+  <% if header_row? %>
     <%= tag.thead(**thead_attributes) do %>
-      <%= header_row.render_in(view_context, &row_proc) %>
+      <%= header_row %>
     <% end %>
   <% end %>
   <%= tag.tbody(**tbody_attributes) do %>
-    <% collection.each do |record| %>
-      <%= body_row(record).render_in(view_context) { |r| row_proc.call(r, record) } %>
+    <% body_rows.each do |body_row| %>
+      <%= body_row %>
     <% end %>
   <% end %>
 <% end %>
