--- a/spec/dummy/app/views/resources/index.html.erb
+++ b/spec/dummy/app/views/resources/index.html.erb
@@ -5,10 +5,9 @@
 
 <% table = Katalyst::TableComponent.new(id: dom_id(Resource, "list"), collection:)
    table.extend(Katalyst::Tables::Identifiable)
-   table.extend(Katalyst::Tables::Selectable)
-   table.with_selection %>
+   table.extend(Katalyst::Tables::Selectable) %>
 
-<%= render table.selection do %>
+<%= render Katalyst::Tables::Selectable::FormComponent.new(table:) do %>
   <%= tag.button "Download", formaction: "/resources.csv", formmethod: "GET" %>
   <%= tag.button "Activate", formaction: "/resources/active", formmethod: "PUT" %>
 <% end %>
