--- a/spec/dummy/app/views/resources/_resource.html+row.erb
+++ b/spec/dummy/app/views/resources/_resource.html+row.erb
@@ -1,5 +1,5 @@
 <%# locals: { row:, resource: } %>
 
-<% row.select if row.selectable? %>
+<% row.select %>
 <% row.cell :name, label: "Resource partial" %>
 <% row.boolean :active, class: "active" %>
