--- a/spec/dummy/app/views/resources/index.html.erb
+++ b/spec/dummy/app/views/resources/index.html.erb
@@ -1,15 +1,14 @@
+<%# locals: { collection: } %>
+
 <% content_for(:head) do %>
   <meta name="turbo-refresh-method" content="morph">
   <meta name="turbo-refresh-scroll" content="preserve">
 <% end %>
 
-<% table = Katalyst::TableComponent.new(id: dom_id(Resource, "list"), collection:)
-   table.extend(Katalyst::Tables::Identifiable)
-   table.extend(Katalyst::Tables::Selectable) %>
-
-<%= render Katalyst::Tables::Selectable::FormComponent.new(table:) do %>
-  <%= tag.button "Download", formaction: "/resources.csv", formmethod: "GET" %>
-  <%= tag.button "Activate", formaction: "/resources/active", formmethod: "PUT" %>
+<%= table_selection_with(collection:) do %>
+  <%= tag.button "Download", formaction: resources_path(format: :csv), formmethod: :get %>
+  <%= tag.button "Activate", formaction: activate_resources_path, formmethod: :put %>
 <% end %>
 
-<%= render table %>
+<%# generating ids for rows is not required for selection, but it makes testing easier %>
+<%= table_with(collection:, generate_ids: true) %>
