Update all doc/test references to row.cell to use typed columns

--- a/spec/dummy/app/views/admin/resources/_resource.html+row.erb
+++ b/spec/dummy/app/views/admin/resources/_resource.html+row.erb
@@ -1,4 +1,4 @@
 <%# locals: { row:, resource: } %>
-<% row.cell :name, label: "Admin partial" do %>
+<% row.text :name, label: "Admin partial" do %>
   <%= resource.name %>
 <% end %>
