--- a/spec/dummy/app/views/application/_custom.html+row.erb
+++ b/spec/dummy/app/views/application/_custom.html+row.erb
@@ -1,4 +1,4 @@
 <%# locals: { row:, foobar: } %>
-<% row.cell :name, label: "Custom partial" do %>
+<% row.text :name, label: "Custom partial" do %>
   <%= foobar.name %>
 <% end %>
