--- a/spec/dummy/app/views/nested/children/_child.html+row.erb
+++ b/spec/dummy/app/views/nested/children/_child.html+row.erb
@@ -1,4 +1,4 @@
 <%# locals: { row:, child: } %>
-<% row.cell :name, label: "Nested partial" do %>
+<% row.text :name, label: "Nested partial" do %>
   <%= child.name %>
 <% end %>
