--- a/app/assets/stylesheets/katalyst/tables/typed-columns/_currency.scss
+++ b/app/assets/stylesheets/katalyst/tables/typed-columns/_currency.scss
@@ -1,5 +1,8 @@
 // where psuedo selector has a specificity of 0 so it can be easily overwritten with simple selectors
 :where(th.type-currency, td.type-currency) {
   width: var(--width-small);
+}
+
+:where(thead th.type-currency, td.type-currency) {
   text-align: right;
 }
