--- a/spec/dummy/app/views/resources/_resource.html+row.erb
+++ b/spec/dummy/app/views/resources/_resource.html+row.erb
@@ -2,4 +2,5 @@
 
 <% row.select %>
 <% row.text :name, label: "Resource partial" %>
+<% row.enum :category %>
 <% row.boolean :active, class: "active" %>
