--- a/spec/dummy/app/views/resources/index.html.erb
+++ b/spec/dummy/app/views/resources/index.html.erb
@@ -1,5 +1,10 @@
 <%# locals: { collection: } %>
 
+<%= form_with(model: collection, method: :get) do |form| %>
+  <%= form.text_field :query %>
+  <%= form.submit "Apply" %>
+<% end %>
+
 <%= table_selection_with(collection:) do %>
   <%= tag.button "Download", formaction: resources_path(format: :csv), formmethod: :get %>
   <%= tag.button "Activate", formaction: activate_resources_path, formmethod: :put %>
