--- a/spec/dummy/app/views/resources/index.html.erb
+++ b/spec/dummy/app/views/resources/index.html.erb
@@ -1,9 +1,6 @@
 <%# locals: { collection: } %>
 
-<%= form_with(model: collection, method: :get) do |form| %>
-  <%= form.text_field :query %>
-  <%= form.submit "Apply" %>
-<% end %>
+<%= filter_with(collection:) %>
 
 <%= table_selection_with(collection:) do %>
   <%= tag.button "Download", formaction: resources_path(format: :csv), formmethod: :get %>
