Refactor collection to use custom types

--- a/app/components/katalyst/tables/filter_component.html.erb
+++ b/app/components/katalyst/tables/filter_component.html.erb
@@ -6,13 +6,11 @@
       <%= form.text_field(
             :query,
             type:         :search,
-            size:         :full,
-            label:        nil,
             autocomplete: "off",
             **input_attributes,
           ) %>
 
-      <%= form.submit("Apply") %>
+      <%= form.button("Apply", type: :submit, name: nil) %>
     <% end %>
   <% end %>
 
