--- a/app/components/katalyst/tables/query/input_component.html.erb
+++ b/app/components/katalyst/tables/query/input_component.html.erb
@@ -6,5 +6,6 @@
         autocomplete: "off",
         **html_attributes,
       ) %>
+  <%= form.hidden_field(:p) %>
   <%= form.button("Apply", type: :submit, name: nil, tabindex: -1) %>
 </div>
