Add a query input placeholder

--- a/app/components/katalyst/tables/query/input_component.html.erb
+++ b/app/components/katalyst/tables/query/input_component.html.erb
@@ -3,6 +3,7 @@
   <%= form.text_field(
         name,
         type:         :search,
+        placeholder:,
         autocomplete: "off",
         **html_attributes,
       ) %>
