Improve descriptions of selected items

--- a/app/components/katalyst/tables/selectable/form_component.html.erb
+++ b/app/components/katalyst/tables/selectable/form_component.html.erb
@@ -7,8 +7,8 @@
               html:   { action: false, hidden: "" }) do |form| %>
   <p class="tables--selection--summary">
     <span data-<%= form_target("count") %>>0</span>
-    <span data-<%= form_target("singular") %> hidden><%= @collection.model_name.singular %></span>
-    <span data-<%= form_target("plural") %>><%= @collection.model_name.plural %></span>
+    <span data-<%= form_target("singular") %> hidden><%= singular_name %></span>
+    <span data-<%= form_target("plural") %>><%= plural_name %></span>
     selected
   </p>
   <%= content %>
