--- a/app/assets/stylesheets/katalyst/tables/_query.scss
+++ b/app/assets/stylesheets/katalyst/tables/_query.scss
@@ -72,8 +72,9 @@
   dl {
     display: grid;
     grid-auto-flow: row;
-    grid-auto-rows: 1fr;
-    grid-template-columns: 1fr 4fr;
+    grid-auto-rows: auto;
+    grid-template-columns: auto 1fr;
+    gap: 0 1rem;
   }
 
   dt {
@@ -83,11 +84,6 @@
 
   dd {
     color: #666;
-  }
-
-  ul {
-    list-style: none;
-    padding-left: 0;
   }
 
   .error {
