--- a/app/components/katalyst/tables/query/input_component.html.erb
+++ b/app/components/katalyst/tables/query/input_component.html.erb
@@ -1,13 +1,14 @@
-<div class="query-input" data-controller="tables--query-input" data-turbo-permanent>
+<%= tag.div **html_attributes do %>
   <%= form.label name, "Search", hidden: "" %>
   <%= form.text_field(
         name,
         type:         :search,
         placeholder:,
         autocomplete: "off",
-        **html_attributes,
+        **input_attributes,
       ) %>
   <div aria-hidden="true" class="highlight" data-tables--query-input-target="highlight"></div>
   <%= form.hidden_field(:p) %>
   <%= form.button("Apply", type: :submit, name: nil, tabindex: -1) %>
-</div>
+  <%= content %>
+<% end %>
