--- a/app/components/katalyst/tables/query/modal_component.html.erb
+++ b/app/components/katalyst/tables/query/modal_component.html.erb
@@ -3,13 +3,13 @@
     <header>
       <% collection.errors.each do |error| %>
         <% next unless error.type == :unknown %>
-        <div class="error">Sorry, we don&rsquo;t support the <code><%= error.attribute %></code> filter.</div>
+        <div class="error"><%= t("katalyst.tables.query.unknown_key_html", key: error.attribute) %></div>
       <% end %>
     </header>
   <% end %>
   <div class="content">
     <% if show_examples? %>
-      <h4>Possible values for <code><%= current_key %>:</code></h4>
+      <h4><%= t("katalyst.tables.query.describe_examples_html", key: current_key) %></h4>
       <dl>
         <% examples_for(current_key).each do |example| %>
           <dt><code><%= format_value(example.value) %></code></dt>
