--- a/app/assets/stylesheets/katalyst/tables/_query.scss
+++ b/app/assets/stylesheets/katalyst/tables/_query.scss
@@ -6,11 +6,15 @@
     grid-template-areas: "input button";
     grid-template-columns: 1fr auto;
 
-    input[type="search"] {
+    [role="searchbox"] {
       grid-area: input;
       background: transparent;
-      color: transparent;
       caret-color: black;
+      resize: none;
+    }
+
+    &[data-connected] [role="searchbox"] {
+      color: transparent;
     }
 
     button {
@@ -20,16 +24,23 @@
 
     .highlight {
       grid-area: input;
-      border: 2px solid transparent;
+      visibility: hidden;
+      border: 1px solid transparent;
       color: black;
       z-index: -1;
       font-size: 1rem;
-      padding-block: 1px;
-      padding-inline: 2px;
+      padding: 2px;
+
+      overflow-wrap: break-word;
+      white-space: pre-wrap;
 
       .value {
         color: #666666;
       }
+    }
+
+    &[data-connected] .highlight {
+      visibility: visible;
     }
   }
 }
